--- a/style.css
+++ b/style.css
@@ -66,12 +66,13 @@
 
 
 }
-main{
+.one{
     background-image: url('https://www.digitalocean.com/static/bg-home-hero-3-bb4b33b77274db09b969f629ad81c4d5.svg');
     color: white;
 }
 h1{
   font-size: 58px;
+  margin-top: 150px;
 }
 .ftext{
   font-size: 20px;
@@ -82,6 +83,7 @@ h1{
   background-color:  #f3f5f9;
   color: #031b4e;
   text-align: center;
+  margin-top: 100px;
 
 }
 h4{
@@ -92,11 +94,13 @@ h4{
     width: 370px;
     background-color: white;
     align-items: center;
+    margin-bottom: 100px;
 
 }
 .name{
   margin-top: 20px;
 }
+
 input{
   width: 330px;
     height: 48px;
@@ -143,3 +147,75 @@ input{
   font-size: 20px;
 
 }
+.two{
+  background-color: #f3f5f9;
+  text-align: center;
+
+  color: #5B6987;
+}
+h5{
+  margin-top: 40px;
+}
+.business{
+  text-decoration: none;
+  color: #1633FF;
+}
+
+
+.three{
+  background-color: white;
+  text-align: center;
+}
+.thtitle{
+  color: #031b4e;
+}
+.block-img{
+  margin-top: 50px;
+}
+.thp{
+  color: #5b6987;
+  margin-left: 100px;
+  margin-right: 100px;
+  font-size: 20px;
+}
+
+
+.thcol{
+  color: #031b4e;
+  font-size: 18px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.
