--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 .container{
   max-width: 1200px;
   margin: 0 auto;
-  border: 1px solid transparent;
+  border: 1px solid black;
 
 }
 
@@ -160,6 +160,8 @@ h5{
 .business{
   text-decoration: none;
   color: #1633FF;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 
@@ -180,7 +182,23 @@ h5{
   font-size: 20px;
 }
 
+.listhree{
+  text-decoration: none;
+  color: black;
 
+}
+.listhree:hover{
+text-decoration: none;
+color: black;
+}
+.btn-lat{
+  border-top: none;
+  border-bottom: none;
+  border-right: none;
+  float: left;
+  background-color: white;
+  display: block;
+}
 .thcol{
   color: #031b4e;
   font-size: 18px;
@@ -248,30 +266,98 @@ background-color:#031b4e;
   text-decoration: none;
     color: #0069ff;
 }
-.tab{
-  display: inline-block;
-  max-width: 1000px;
-}
+
 
 .code{
   color: white;
-  width: 70px;
+
 }
 
 .location{
 color: #5b6987;
-width: 250px;
+
+
 }
 
 .test{
   text-decoration: none;
-  width: 80px;
+
+  color: #00d7d2;
+
+}
+
+.countries{
+  height: 30px;
+}
+
+.test:hover{
+  color: #1633FF;
+  text-decoration: none;
+
 }
 
 
-li{
-  list-style-type: disc;
+.seven{
+  background-color: #f3f5f9;
+   text-align: center;
+   align-items: center;
 }
+.psvn{
+   color: #031b4e;
+   font-size: 18px;
+   padding: 0px 55px ;
+}
+
+.box3{
+
+ border: 1px solid white;
+ background-color: white;
+ border-radius: 10px;
+}
+
+.fa-arrow{
+  vertical-align: middle;
+}
+
+
+.pbox{
+  font-size: 25px;
+  color: #5b6987;
+}
+
+.sign{
+  margin-top: 100px;
+  color: #5b6987;
+}
+.cto{
+  margin-bottom: 100px;
+}
+
+.eight{
+  background-image:url(https://prismic-io.s3.amazonaws.com/www-static/b4ba92a9-0956-484b-9a3f-68ef4d550fd4_bg-home-cta.svg);
+  background-color:#0069ff;
+  color: white;
+}
+
+.gets {
+  margin-top: 70px;
+  margin-bottom: 80px;
+}
+
+.create{
+  width: 230px;
+    height: 55px;
+    background-color:white;
+    color:  #0065f2;
+    margin-right: 20px;
+    border: 1px solid #0065f2;
+    border-radius: 7px;
+    margin-top: 70px;
+    margin-bottom: 80px;
+    float: right;
+}
+
+
 
 
 
